swapped connect out for express

--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "browserify": "*",
     "colors": "*",
-    "connect": "*",
+    "express": "*",
     "csv": "*",
     "mongodb": "*",
     "mongoose": "*",
